--- a/html/Index.html
+++ b/html/Index.html
@@ -172,111 +172,113 @@
                 <p>Оцените праздничные туфли и сумки от Prada и других брендов.</p>
             </div>
         </div>
-        <h3>Прозрачные ткани</h3>
-        <div class="cards-wrapper d-flex flex-wrap justify-content-between">
-            <div class="card">
-                <button type="button" title="Добавить в желаемое" class="favourite d-flex flex-row-reverse justify-content-end">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                        <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                    </svg>
-                </button>
-                <a href="Product.html">
-                    <div class="card-body d-flex flex-column">
-                        <img src="/html/source/img/prod5.png" alt="">
-                    </div>
-                    <div class="card-text">
-                        <div class="season">
-                            Новый сезон
+        <div class="cards-list-wrapper">
+            <h3>Прозрачные ткани</h3>
+            <div class="cards-wrapper d-flex flex-wrap justify-content-between">
+                <div class="card">
+                    <button type="button" title="Добавить в желаемое" class="favourite d-flex flex-row-reverse justify-content-end">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
+                        </svg>
+                    </button>
+                    <a href="Product.html">
+                        <div class="card-body d-flex flex-column">
+                            <img src="/html/source/img/prod5.png" alt="">
                         </div>
-                        <div class="brand">
-                            Simone Rocha
+                        <div class="card-text">
+                            <div class="season">
+                                Новый сезон
+                            </div>
+                            <div class="brand">
+                                Simone Rocha
+                            </div>
+                            <div class="description">
+                                платье миди Creature
+                            </div>
+                            <div class="cost">
+                                20 000 &#x20bd;
+                            </div>
                         </div>
-                        <div class="description">
-                            платье миди Creature
+                    </a>
+                </div>
+                <div class="card">
+                    <button type="button" title="Добавить в желаемое" class="favourite d-flex justify-content-end">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
+                        </svg>
+                    </button>
+                    <a href="Product.html">
+                        <div class="card-body d-flex flex-column">
+                            <img src="/html/source/img/prod6.png" alt="">
                         </div>
-                        <div class="cost">
-                            20 000 &#x20bd;
+                        <div class="card-text">
+                            <div class="season">
+                                Новый сезон
+                            </div>
+                            <div class="brand">
+                                Mugler
+                            </div>
+                            <div class="description">
+                                мюли Fang 20
+                            </div>
+                            <div class="cost">
+                                15 000 &#x20bd;
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </div>
-            <div class="card">
-                <button type="button" title="Добавить в желаемое" class="favourite d-flex justify-content-end">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                        <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                    </svg>
-                </button>
-                <a href="Product.html">
-                    <div class="card-body d-flex flex-column">
-                        <img src="/html/source/img/prod6.png" alt="">
-                    </div>
-                    <div class="card-text">
-                        <div class="season">
-                            Новый сезон
+                    </a>
+                </div>
+                <div class="card">
+                    <button type="button" title="Добавить в желаемое" class="favourite d-flex justify-content-end">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
+                        </svg>
+                    </button>
+                    <a href="Product.html">
+                        <div class="card-body d-flex flex-column">
+                            <img src="/html/source/img/prod7.png" alt="">
                         </div>
-                        <div class="brand">
-                            Mugler
+                        <div class="card-text">
+                            <div class="season">
+                                Новый сезон
+                            </div>
+                            <div class="brand">
+                                Oroenza Schouler
+                            </div>
+                            <div class="description">
+                                пальто Finch
+                            </div>
+                            <div class="cost">
+                                45 000 &#x20bd;
+                            </div>
                         </div>
-                        <div class="description">
-                            мюли Fang 20
+                    </a>
+                </div>
+                <div class="card">
+                    <button type="button" title="Добавить в желаемое" class="favourite d-flex justify-content-end">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
+                        </svg>
+                    </button>
+                    <a href="Product.html">
+                        <div class="card-body d-flex flex-column">
+                            <img src="/html/source/img/prod8.png" alt="">
                         </div>
-                        <div class="cost">
-                            15 000 &#x20bd;
+                        <div class="card-text">
+                            <div class="season">
+                                Новый сезон
+                            </div>
+                            <div class="brand">
+                                Docle & Gabana
+                            </div>
+                            <div class="description">
+                                сетчатая юбка-карандаш
+                            </div>
+                            <div class="cost">
+                                20 000 &#x20bd;
+                            </div>
                         </div>
-                    </div>
-                </a>
-            </div>
-            <div class="card">
-                <button type="button" title="Добавить в желаемое" class="favourite d-flex justify-content-end">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                        <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                    </svg>
-                </button>
-                <a href="Product.html">
-                    <div class="card-body d-flex flex-column">
-                        <img src="/html/source/img/prod7.png" alt="">
-                    </div>
-                    <div class="card-text">
-                        <div class="season">
-                            Новый сезон
-                        </div>
-                        <div class="brand">
-                            Oroenza Schouler
-                        </div>
-                        <div class="description">
-                            пальто Finch
-                        </div>
-                        <div class="cost">
-                            45 000 &#x20bd;
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="card">
-                <button type="button" title="Добавить в желаемое" class="favourite d-flex justify-content-end">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                        <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                    </svg>
-                </button>
-                <a href="Product.html">
-                    <div class="card-body d-flex flex-column">
-                        <img src="/html/source/img/prod8.png" alt="">
-                    </div>
-                    <div class="card-text">
-                        <div class="season">
-                            Новый сезон
-                        </div>
-                        <div class="brand">
-                            Docle & Gabana
-                        </div>
-                        <div class="description">
-                            сетчатая юбка-карандаш
-                        </div>
-                        <div class="cost">
-                            20 000 &#x20bd;
-                        </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
             </div>
         </div>
         <div class="topic-cards-wrapper d-flex flex-row justify-content-between">
@@ -376,7 +378,7 @@
         </div>
     </main>
     <div id="footer"></div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
     <script src="/html/js/Index.js"></script>
 </body>
 </html>
