--- a/html/prodList.html
+++ b/html/prodList.html
@@ -464,111 +464,6 @@
                         </div>
                     </a>
                 </div>
-                <div class="card" title="топ с вырезом халтер">
-                    <button type="button" title="Добавить в желаемое" class="favourite d-flex flex-row-reverse justify-content-end">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                        </svg>
-                    </button>
-                    <a href="Product.html">
-                        <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prodList/prodPlaceholder.png" alt="">
-                        </div>
-                        <div class="card-text">
-                            <div class="season">
-                                Новый сезон
-                            </div>
-                            <div class="brand">
-                                Prada
-                            </div>
-                            <div class="description">
-                                топ с вырезом халтер
-                            </div>
-                            <div class="cost">
-                                20 000 &#x20bd;
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="card">
-                    <button type="button" title="Добавить в желаемое" class="favourite d-flex justify-content-end">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                        </svg>
-                    </button>
-                    <a href="Product.html">
-                        <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prodList/prodPlaceholder.png" alt="">
-                        </div>
-                        <div class="card-text">
-                            <div class="season">
-                                Новый сезон
-                            </div>
-                            <div class="brand">
-                                TOM FORD
-                            </div>
-                            <div class="description">
-                                клатч с тиснением под кожу крокодила
-                            </div>
-                            <div class="cost">
-                                15 000 &#x20bd;
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="card">
-                    <button type="button" title="Добавить в желаемое" class="favourite d-flex justify-content-end">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                        </svg>
-                    </button>
-                    <a href="Product.html">
-                        <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prodList/prodPlaceholder.png" alt="">
-                        </div>
-                        <div class="card-text">
-                            <div class="season">
-                                Новый сезон
-                            </div>
-                            <div class="brand">
-                                Prada
-                            </div>
-                            <div class="description">
-                                замшевая юбка миди
-                            </div>
-                            <div class="cost">
-                                25 000 &#x20bd;
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="card">
-                    <button type="button" title="Добавить в желаемое" class="favourite d-flex justify-content-end">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-                        </svg>
-                    </button>
-                    <a href="Product.html">
-                        <div class="card-body d-flex flex-column">
-                            <img src="/html/source/img/prodList/prodPlaceholder.png" alt="">
-                        </div>
-                        <div class="card-text">
-                            <div class="season">
-                                Новый сезон
-                            </div>
-                            <div class="brand">
-                                Saint Laurent
-                            </div>
-                            <div class="description">
-                                туфли д'Орсе
-                            </div>
-                            <div class="cost">
-                                10 000 &#x20bd;
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                
             </div>
             <div class="cards-list-footer d-flex flex-column align-items-end position-relative">
                 <div class="pages-indicator position-absolute bottom-50 start-50">
@@ -593,7 +488,116 @@
             </div>
         </div>
         <div class="cards-list-wrapper">
-            <h3>Рекомендации</h3>
+            <h3 class="cards-list-header">Недавно просмотрено</h3>
+            <div class="cards-wrapper d-flex flex-wrap justify-content-between">
+                <div class="card">
+                    <button type="button" title="Добавить в желаемое" class="favourite d-flex flex-row-reverse justify-content-end">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
+                        </svg>
+                    </button>
+                    <a href="Product.html">
+                        <div class="card-body d-flex flex-column">
+                            <img src="/html/source/img/prod5.png" alt="">
+                        </div>
+                        <div class="card-text">
+                            <div class="season">
+                                Новый сезон
+                            </div>
+                            <div class="brand">
+                                Simone Rocha
+                            </div>
+                            <div class="description">
+                                платье миди Creature
+                            </div>
+                            <div class="cost">
+                                20 000 &#x20bd;
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="card">
+                    <button type="button" title="Добавить в желаемое" class="favourite d-flex justify-content-end">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
+                        </svg>
+                    </button>
+                    <a href="Product.html">
+                        <div class="card-body d-flex flex-column">
+                            <img src="/html/source/img/prod6.png" alt="">
+                        </div>
+                        <div class="card-text">
+                            <div class="season">
+                                Новый сезон
+                            </div>
+                            <div class="brand">
+                                Mugler
+                            </div>
+                            <div class="description">
+                                мюли Fang 20
+                            </div>
+                            <div class="cost">
+                                15 000 &#x20bd;
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="card">
+                    <button type="button" title="Добавить в желаемое" class="favourite d-flex justify-content-end">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
+                        </svg>
+                    </button>
+                    <a href="Product.html">
+                        <div class="card-body d-flex flex-column">
+                            <img src="/html/source/img/prod7.png" alt="">
+                        </div>
+                        <div class="card-text">
+                            <div class="season">
+                                Новый сезон
+                            </div>
+                            <div class="brand">
+                                Oroenza Schouler
+                            </div>
+                            <div class="description">
+                                пальто Finch
+                            </div>
+                            <div class="cost">
+                                45 000 &#x20bd;
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="card">
+                    <button type="button" title="Добавить в желаемое" class="favourite d-flex justify-content-end">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
+                        </svg>
+                    </button>
+                    <a href="Product.html">
+                        <div class="card-body d-flex flex-column">
+                            <img src="/html/source/img/prod8.png" alt="">
+                        </div>
+                        <div class="card-text">
+                            <div class="season">
+                                Новый сезон
+                            </div>
+                            <div class="brand">
+                                Docle & Gabana
+                            </div>
+                            <div class="description">
+                                сетчатая юбка-карандаш
+                            </div>
+                            <div class="cost">
+                                20 000 &#x20bd;
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="cards-list-wrapper">
+            <h3 class="cards-list-header">Рекомендации</h3>
             <div class="cards-wrapper d-flex flex-wrap justify-content-between">
                 <div class="card">
                     <button type="button" title="Добавить в желаемое" class="favourite d-flex flex-row-reverse justify-content-end">
@@ -772,7 +776,7 @@
         </div>
     </main>
     <div id="footer"></div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
     <script src="/html/js/Index.js"></script>
 </body>
 </html>
